fix hover highlight styles dark mode

--- a/src/html/component/properties-editor/properties-editor.less
+++ b/src/html/component/properties-editor/properties-editor.less
@@ -67,7 +67,7 @@
 }
 
 .menu-item:hover {
-  background: @secondary-color;
+  background: @secondary-light;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -91,6 +91,10 @@
 
   .menu-item > a {
     color: @text-dark;
+  }
+
+  .menu-item:hover {
+    background: @secondary-dark;
   }
 }
 
