--- a/src/uikit-theme.less
+++ b/src/uikit-theme.less
@@ -7,7 +7,8 @@
 
 @global-link-color: #DA7D02;
 @primary-color: #5282ee;
-@secondary-color: #dedede;
+@secondary-light: #dedede;
+@secondary-dark: #222222;
 @background-light: #f6f6f6;
 @background-dark: #2f2f2f;
 @button-light: rgb(222, 222, 222);
